@@ -1,3 +1,8 @@
+2025-12-11  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctangleboot.cin,
+	* cwebboot.cin: Avoid spurious spaces in macro output.
+
 2025-11-30  Karl Berry  <karl@freefriends.org>
 
 	* configure.ac (XETEX_MACOSX): check for enable_xetex=yes
